added the keyboard control

--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
   </head>
   
   <body class="font-monogram overflow-hidden text-2xl relative ">
-    <p class="note text-white absolute z-50 top-5 md:top-10 left-5 md:left-10">
-      Tap/Click around to move
+    <p class="note text-white absolute z-50 top-5 md:top-10 left-5 md:left-10 grid">
+      <span class="flex items-center">
+
+        Tap/Click or <img src="./arrow.png" class="w-16 pr-1" alt="arrow keys"/> to move around
+      </span>
+      <span class="">
+
+        Use Esc to close the dialogue. 
+      </span>
     </p>
     <div
       id="textbox-container" style="display: none;"
